<resources>
    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_currency_converter">Welcome to Currency Converter</string>
    <string name="amount_in_usd">Amount in USD $</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="get_amount_in_inr">Get Amount in INR</string>
    <string name="enter_amount_in_inr">Enter Amount in INR</string>
    <string name="get_amount_in_usd">Get Amount in USD</string>
    <string name="amount_in_inr">Amount in INR</string>
</resources>
